--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -4,7 +4,6 @@
     <string name="hintET">Název (např. test)</string>
     <string name="action_settings">Nastavení</string>
     <string name="vymazatZnamky">Vymazat známky</string>
-    <string name="menuHelp">Nápověda</string>
     <string name="feedback">Odeslat názor</string>
     <string name="weight">Váha</string>
     <string name="mark">Známka</string>
@@ -12,12 +11,8 @@
     <string name="buttonAdd">Přidat známku</string>
     <string name="prumer">Průměr: </string>
     <string name="welcome_title">Co je nového?</string>
-    <string name="ok">OK</string>
-    <string name="areYouSure">Vážně chceš provést tuto akci?</string>
     <string name="titleDelete">Smazat</string>
     <string name="deleteAllMes">Smazat všechny známky v tomto předmětu</string>
-    <string name="yes">Ano</string>
-    <string name="adbError">Chyba</string>
     <string name="cancel">Zrušit</string>
     <string name="close">Zavřít</string>
     <string name="illegalArgument">Název nebo známka je prázdná</string>
@@ -241,6 +236,10 @@
     <string name="prefs_subject_ffmark_summary">{[SettingsActivity.ffMark.getText()]-[SettingsActivity.badMark.getText()]}</string>
     <string name="prefs_subject_badmark_title">Červený průměr</string>
     <string name="prefs_subject_badmark_summary">{[SettingsActivity.badMark.getText()]+}</string>
+    <string name="tab_title_change_et">(př. Matematika)</string>
+    <string name="tab_title_change_label">Název předmětu</string>
+    <string name="tab_title_change_dismiss_dialog">Neuloženo</string>
+    <string name="versionCodeFull">(%1$s)</string>
 
     <string-array name="order">
         <item>Sestupně</item>
